<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <DUT Name="ST_PartialEnergy" Id="{9f91291b-7962-4fca-b4cb-fdf4caa35cc7}">
    <Declaration><![CDATA[TYPE ST_PartialEnergy :
STRUCT
	Partial_Active_Energy_Import:	REAL;
	Partial_Reactive_Energy_Import:	REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>