<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <DUT Name="ST_Power2" Id="{b3e9744b-a174-4ccf-bced-681887cdcab3}">
    <Declaration><![CDATA[TYPE ST_Power2 :
STRUCT
	Total_Reactive_Power:	REAL;
	Reserved2:				REAL;
	Reserved3:				REAL;
	Reserved4:				REAL;
	Total_Apparent_Power:	REAL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>