<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <DUT Name="ST_PowerFactor" Id="{d845f419-b0fd-4166-bea7-3eab71bdc249}">
    <Declaration><![CDATA[TYPE ST_PowerFactor :
STRUCT
	Total_Power_Factor:	REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>