<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_Voltage2" Id="{dae24e8d-2286-4cf3-aca2-906df8fb0263}">
    <Declaration><![CDATA[TYPE ST_Voltage2 :
STRUCT
	Voltage_L1_N:	REAL;
	Voltage_L2_N:	REAL;
	Voltage_L3_N:	REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>